# genomic-nlp

./: README.md  environment.yml  pyproject.toml  requirements.txt
figures/: paper_figures.ipynb
figures/.ipynb_checkpoints/: paper_figures-checkpoint.ipynb
scripts/: MultiRunner.py  classify.py  create_cross_validation_data.py  cross_validate.py  optimize_ML.py  predict_hypothetical.py  rarefaction_analysis.py  utils.py
src/: data.py  gene2vec.py  models.py  plot.py
src/genomic_embeddings/: Embeddings.py  Gff.py  corpus.py  data.py  models.py
