[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genomic_embeddings"
version = "0.0.2"
authors = [
  { name="Danielle Miller Sayag", email="danimillers10@gmail.com" },
]
description = "Package supporting the paper Deciphering microbial gene function using natural language processing"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/burstein-lab/genomic-nlp"
